fix suggestion scroll being 2 elements behind

--- a/kit/src/layout/chatbar/style.scss
+++ b/kit/src/layout/chatbar/style.scss
@@ -121,7 +121,7 @@
   	}
 }
 
-.chatbar-suggestions {
+#chatbar-suggestions {
 	position: absolute; 
 	bottom: 100%;
 	color: var(--text-color); 
